--- a/pages/Home/AboveTheFold/AboveTheFold.css
+++ b/pages/Home/AboveTheFold/AboveTheFold.css
@@ -1,12 +1,22 @@
 #above-the-fold {
-  border: 1px solid red;
   padding: 30px;
   grid-template-columns: 1fr 1fr;
 }
 
 #above-the-fold > * {
   width: 100%;
-  border: 1px solid blue;
+}
+
+#intro-text {
+  max-width: 575px;
+}
+
+#intro-text h1 {
+  font-size: 2.5rem;
+}
+
+#intro-text h2 {
+  font-size: 1.25rem;
 }
 
 #chart {
