--- a/pages/Home/AboveTheFold/AboveTheFold.css
+++ b/pages/Home/AboveTheFold/AboveTheFold.css
@@ -1,4 +1,5 @@
 #above-the-fold {
+  margin-top: 150px !important;
   padding: 30px;
   grid-template-columns: 1fr 1fr;
 }
@@ -19,7 +20,22 @@
   font-size: 1.25rem;
 }
 
+#cta-container {
+  margin-top: 25px;
+}
+
+#cta-container button {
+  margin-right: 20px;
+}
+
 #chart {
   height: 100%;
-  max-width: 1000px;
+  max-width: 800px;
+}
+
+/* When navigation gets taller */
+@media screen and (max-width: 680px) {
+  #above-the-fold {
+    margin-top: 250px !important;
+  }
 }
