--- a/pages/Footer/Footer.css
+++ b/pages/Footer/Footer.css
@@ -1,13 +1,14 @@
 footer {
   height: 200px;
   width: 100%;
+  padding: 0 30px;
   margin-top: 100px;
 }
 
 #footer {
+  max-width: 1400px;
   width: 100%;
   grid-template-columns: repeat(2, 1fr);
-  padding: 0 40px;
 }
 
 #footer > * {
