Prettified API example JSON

--- a/static/swagger.css
+++ b/static/swagger.css
@@ -1,2 +1,7 @@
-.swagger-ui .topbar { display: none; }
-.opblock-options { display: none; }
+.swagger-ui .topbar {
+  display: none;
+}
+
+.opblock-options {
+  display: none;
+}
